--- a/style.css
+++ b/style.css
@@ -447,3 +447,129 @@ nav a:hover,
 .demo-btn:hover {
   background: white;
 }
+
+/*Contact*/
+* {
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
+}
+
+body {
+  margin: 0;
+  background: url("https://images.unsplash.com/photo-1534791547706-47c4b5d3ab63?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80")
+    no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 50px;
+  padding: 60px 30px;
+}
+
+.card {
+  background-color: #2b2d42;
+  border-radius: 20px;
+  padding: 35px;
+  width: 450px;
+  max-width: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+.left-card {
+  text-align: center;
+}
+
+.profile-img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 15px;
+  margin-bottom: 25px;
+}
+
+.job-title {
+  color: #ccc;
+  font-weight: 400;
+  font-size: 1.1rem;
+  margin: 5px 0;
+}
+
+.desc {
+  font-size: 1rem;
+  margin: 15px 0 20px;
+  line-height: 1.5;
+}
+
+.connect-title {
+  margin-top: 25px;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.social-icons a img {
+  width: 40px;
+  margin: 12px;
+  transition: transform 0.2s ease;
+}
+.social-icons a:hover img {
+  transform: scale(1.1);
+}
+
+.form-card input,
+.form-card textarea {
+  width: 100%;
+  padding: 28px;
+  margin: 12px 0;
+  border-radius: 10px;
+  border: none;
+  background-color: #edf2f4;
+  color: black;
+  font-size: 1rem;
+}
+
+.form-card .row {
+  display: flex;
+  gap: 15px;
+}
+
+.form-card .row input {
+  flex: 1;
+}
+
+.form-card button {
+  width: 100%;
+  padding: 14px;
+  margin-top: 15px;
+  background: linear-gradient(to right, #00b894, #00cec9);
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.form-card button:hover {
+  background: linear-gradient(to right, #00cec9, #00b894);
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 15px;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  .form-card .row {
+    flex-direction: column;
+  }
+}
