--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ nav a:hover,
 /* card skill */
 .skills-section {
   padding: 60px 10%;
-  background-color: rgba(0, 84, 107, 0.5);
+/*   background-color: rgba(0, 84, 107, 0.5); */
   backdrop-filter: blur(10px);
   color: white;
   text-align: center;
